@@ -1,3 +1,8 @@
+Tue Jan 26 14:12:56 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* xappy/unittests/cached_searches.py: Test asking for facets with a
+	  cached query id, when none are cached.
+
 Tue Jan 26 14:01:01 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* xappy/doctests/searchconnection_doctest2.txt,
